--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,10 @@ RoxygenNote: 7.3.2
 Depends:
     R (>= 4.3)
 Suggests:
-    httr2
+    dplyr,
+    reticulate,
+    testthat (>= 3.0.0)
 LinkingTo:
     cpp11
 SystemRequirements: blosc: blosc-devel (rpm) or libblosc-dev (deb)
+Config/testthat/edition: 3
