--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,15 @@
 Package: blosc
 Title: Compress and Decompress Data Using the BLOSC Library
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: 
     person("Pepijn", "de Vries", role = c("aut", "cre"),
       email = "pepijn.devries@outlook.com",
       comment = c(ORCID = "0000-0002-7961-6646"))
-Description: TODO.
+Description: Blosc is a blocking, shuffling and lossless compression
+    algorithm. It is often used to compress n-dimensional structured
+    array data. It is applied (amongst others) in the geo-spatial
+    zarr file format. This package can be used to decompress such
+    data or to compress data.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
