--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: blosc
 Title: Compress and Decompress Data Using the BLOSC Library
-Version: 0.0.1
+Version: 0.0.1.0001
 Authors@R: 
     person("Pepijn", "de Vries", role = c("aut", "cre"),
       email = "pepijn.devries@outlook.com",
@@ -22,5 +22,7 @@ Suggests:
     testthat (>= 3.0.0)
 LinkingTo:
     cpp11
+URL: https://pepijn-devries.github.io/blosc/, https://github.com/pepijn-devries/blosc/
+BugReports: https://github.com/pepijn-devries/blosc/issues
 SystemRequirements: blosc: blosc-devel (rpm) or libblosc-dev (deb)
 Config/testthat/edition: 3
