--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: blosc
 Title: Compress and Decompress Data Using the BLOSC Library
-Version: 0.0.4.0002
+Version: 0.0.5
 Authors@R: 
     person("Pepijn", "de Vries", role = c("aut", "cre"),
       email = "pepijn.devries@outlook.com",
       comment = c(ORCID = "0000-0002-7961-6646"))
-Description: Blosc is a blocking, shuffling and lossless compression
-    algorithm. It is often used to compress n-dimensional structured
-    array data. It is applied (amongst others) in the geo-spatial
-    zarr file format. This package can be used to decompress such
-    data or to compress data.
+Description: Arrays of structured data types can require large volumes of disk
+    space to store. Blosc is a library that provides a fast and efficient way
+    to compress such data. It is often applied in storage of n-dimensional
+    arrays, such as in the case of the geo-spatial zarr file format. This
+    package can be used to compress and decompress data using Blosc.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
