--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: blosc
 Title: Compress and Decompress Data Using the 'BLOSC' Library
-Version: 0.0.6.0004
+Version: 0.0.7
 Authors@R:
     c(
       person("Pepijn", "de Vries", role = c("aut", "cre"),
@@ -25,6 +25,7 @@ Suggests:
     knitr,
     reticulate,
     rmarkdown,
+    spelling,
     testthat (>= 3.0.0)
 LinkingTo:
     cpp11
@@ -33,3 +34,4 @@ BugReports: https://github.com/pepijn-devries/blosc/issues
 SystemRequirements: blosc: blosc-devel (rpm) or libblosc-dev (deb)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+Language: en-US
