Try different setup

--- a/configure.ac
+++ b/configure.ac
@@ -1,26 +1,31 @@
-AC_INIT([blosc], 0.1.0)
+AC_INIT
+AC_CONFIG_SRCDIR(["blosc"])
 
-AC_LANG(C++)
-AC_REQUIRE_CPP
-AC_PROG_CXX
+# Find the compiler and compiler flags used by R.
+: ${R_HOME=`R RHOME`}
+if test -z "${R_HOME}"; then
+  echo "could not determine R_HOME"
+  exit 1
+fi
+CC=`"${R_HOME}/bin/R" CMD config CC`
+CFLAGS=`"${R_HOME}/bin/R" CMD config CFLAGS`
+CPPFLAGS=`"${R_HOME}/bin/R" CMD config CPPFLAGS`
 
-# default values
-AC_SUBST([BLOSC_INCLUDE], "-I/usr/local/include")
-AC_SUBST([BLOSC_LIBS], "/usr/local/lib/blosc.a")
+AC_SEARCH_LIBS(blosc, [], [AC_MSG_ERROR(The blosc library is required.)])
+AC_CHECK_HEADERS(blosc.h, [], [AC_MSG_ERROR(The blosc library headers are required.)])
 
-# allow for override
-AC_ARG_WITH([blosc],
-            AC_HELP_STRING([--with-blosc=PREFIX],
-                           [path to where blosc is installed]),
-            [
-             BLOSC_INCLUDE="-I${with_blosc}/include"
-             BLOSC_LIBS="${with_blosc}/lib/blosc.a"
-            ],
-            [])
-
-# create and report output
+# Write the flags into the src/Makevars file.
+AC_SUBST([PKG_CPPFLAGS], ["${PKG_CPPFLAGS}"])
+AC_SUBST([PKG_LIBS], ["${LIBS} ${PKG_LIBS}"])
 AC_CONFIG_FILES([src/Makevars])
 AC_OUTPUT
-echo
-echo "Final src/Makevars"
-cat src/Makevars
+
+echo "
+  --------------------------------------------------
+  Configuration for ${PACKAGE_NAME} ${PACKAGE_VERSION}
+
+    cppflags: ${CPPFLAGS} ${PKG_CPPFLAGS}
+    libs:     ${PKG_LIBS}
+
+  --------------------------------------------------
+"
