--- a/configure.ac
+++ b/configure.ac
@@ -72,6 +72,15 @@ else
 fi
 
 if test "x${PKG_CPPFLAGS}${PKG_LIBS}" = x; then
+  case "${host_os}" in
+    darwin*)
+      AC_MSG_NOTICE([attempting to install blosc from mac.R-project.org])
+      `"sudo ${RBIN}Rscript" -e source('https://mac.R-project.org/bin/install.R');install.libs('blosc')`
+    ;;
+  esac
+fi
+
+if test "x${PKG_CPPFLAGS}${PKG_LIBS}" = x; then
     echo "
   -----------------------------------------------------------------------
 
