--- a/configure.ac
+++ b/configure.ac
@@ -75,7 +75,7 @@ if test "x${PKG_CPPFLAGS}" = x; then
   case "${host_os}" in
     darwin*)
       AC_MSG_NOTICE([attempting to install blosc from mac.R-project.org])
-      `"sudo ${RBIN}Rscript -e source('https://mac.R-project.org/bin/install.R');install.libs('blosc')"`
+      `"sudo ${RBIN}Rscript -e \"source('https://mac.R-project.org/bin/install.R');install.libs('blosc')\""`
     ;;
   esac
 fi
