--- a/configure.ac
+++ b/configure.ac
@@ -74,7 +74,7 @@ fi
 if test "x${PKG_CPPFLAGS}" = x; then
   case "${host_os}" in
     darwin*)
-      `ls \""${R_HOME}"\" -LR`
+      `ls \""${R_HOME}/"\" -LR`
       AC_MSG_NOTICE([attempting to install blosc from mac.R-project.org])
       `"sudo ${R_HOME}/bin/Rscript -e \"source('https://mac.R-project.org/bin/install.R');install.libs('blosc')\""`
     ;;
